--- a/style.css
+++ b/style.css
@@ -4,13 +4,18 @@
     font-family: sans-serif;
     box-sizing: border-box;
 }
+body{
+    width: 100%;
+    position: relative;
+}
 .container{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background: #e3f9ff;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 10px;
 }
 .calculator{
     background: #3a4452;
@@ -35,6 +40,9 @@ form .display{
     justify-content: flex-end;
     margin: 20px 0;
 }
+form > div{
+    display: flex;
+}
 form .display input{
     text-align: right;
     flex: 1;
@@ -47,6 +55,9 @@ form input.equal{
 form input.operator{
     color: #33ffd8;
 }
-@media screen {
-    
+@media screen and (max-width:400px) {
+    .calculator{
+        padding: 0;
+    }
+  
 }
